# BoostStudy

Msm/: CMakeLists.txt  SampleCode.cpp
Msm/Basic/: Action.hpp  AnonymousTransitTest.cpp  CMakeLists.txt  ConflictTransitTest.cpp  DeferEventTest.cpp  Event.hpp  Guard.hpp  MsmActionTest.cpp  MsmGuardTest.cpp  MsmStateEntriesTest.cpp  MsmStateTest.cpp  OrthogonalRegionTest.cpp  State.hpp  SubMachineTest.cpp  Tracer.hpp
Msm/Basic/Includes/: Action.hpp  Event.hpp  Guard.hpp  State.hpp
Msm/Basic/TracerLib/: CMakeLists.txt  Tracer.cpp  Tracer.hpp  TracerMocker.cpp  TracerMocker.hpp
Msm/Doc/: Boost State Machine.md  ConflictTransit.plantuml  OrthogonalRegion.plantuml  Submachine.plantuml
Msm/Doc/Images/: AnonymousState.plantuml  BasicStateMachine.plamtuml  SimpleState.plantuml  StateTransitDetails.plantuml
Msm/FirstStep/: CMakeLists.txt  SimpleMSM.cpp
Msm/FirstStep/src/: RrcStateMachine.hpp
